# LemonadeBench

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
Users/shaun/Documents/GitHub/LemonadeBench/examples/rl_solvers/models/lemonade_recurrent_ppo_logs/: evaluations.npz
Users/shaun/Documents/GitHub/LemonadeBench/examples/rl_solvers/models/lemonade_recurrent_ppo_tensorboard/RecurrentPPO_1/: events.out.tfevents.1765211094.Shauns-MacBook-Air.local.87911.0
docs/: web-client.md
docs/paper/: .gitignore  FINAL_CITATION_REPORT.md  citation_updates_needed.md  citation_verification.md  main.tex  references.bib  references_UPDATED.bib
docs/paper/appendices/: A-environment-details.tex  B-prompt-templates.tex  C-model-versions.tex  D-goal-framing.tex  E-agent-implementations.tex  F-sample-reasoning.tex  G-reproducibility.tex
docs/paper/sections/: 01-introduction.tex  02-related-work.tex  03-environment.tex  04-methodology.tex  05-experiments.tex  06-results.tex  07-discussion.tex  08-conclusion.tex
examples/: evaluate_ppo_baseline.py  train_rl_agent.py
examples/configs/: architecture_ablation.yaml  batch_config.yaml  free_model_test.yaml  goal_framing_experiment.yaml  haiku_clean_test.yaml  haiku_context_test.yaml  haiku_direct_test.yaml  paper_methodology.yaml  paper_methodology_gemini3_pro.yaml  paper_methodology_single_model.yaml  scaffolding_ablation.yaml  single_model_test.yaml
examples/llm_agents/: llm_agent.py  simple_agent.py
examples/mathematical_solvers/: run_optimal_solver.py
examples/rl_models/: lemonade_ppo_vecnormalize.pkl  ppo_baseline_results.json
lemonade_bench/: .dockerignore  README.md  __init__.py  client.py  db.py  models.py  openenv.yaml  pyproject.toml
lemonade_bench/agents/: __init__.py  base.py  llm_agent.py  optimal_solver.py  prompts.py
lemonade_bench/agents/architectures/: __init__.py  act_reflect.py  full.py  plan_act.py  react.py
lemonade_bench/agents/providers/: __init__.py  anthropic.py  base.py  context_manager.py  litellm_provider.py  model_registry.py  openai.py  openrouter.py  vllm_provider.py
lemonade_bench/agents/providers/.cache/: openrouter_models.json
lemonade_bench/agents/rl/: __init__.py  evaluate.py  gym_wrapper.py  spaces.py
lemonade_bench/agents/tools/: __init__.py  base.py  calculator.py  code_interpreter.py
lemonade_bench/harness/: __init__.py  cli.py  config.py  metrics.py  reports.py  runner.py
lemonade_bench/rft/: __init__.py  augmentation.py  collect.py  config.py  data_collector.py  formatting.py  grpo_trainer.py  online_grpo.py  train.py
lemonade_bench/rft/configs/: online_grpo.yaml  qwen3_30b_lora.yaml
lemonade_bench/runs/2025-12-07_124159/: config.json  turns.jsonl
lemonade_bench/runs/2025-12-07_124330/: config.json  conversation.json  summary.json  turns.jsonl
lemonade_bench/runs/2025-12-07_134502/: config.json  conversation.json  summary.json  turns.jsonl
lemonade_bench/server/: Dockerfile  __init__.py  app.py  lemonade_environment.py  requirements.txt
lemonade_bench/supabase/: config.toml
lemonade_bench/supabase/migrations/: 001_initial_schema.sql  002_fix_rls_policies.sql  003_add_error_tracking.sql  004_add_experiment_factors.sql
lemonade_bench/tests/: __init__.py  conftest.py  test_config.py  test_environment.py  test_ice_consumption.py  test_models.py  test_scenarios.py  test_tools.py
mnt/c/Users/shaun/OneDrive/Documents/GitHub/LemonadeBench/examples/rl_models/lemonade_ppo_logs/: evaluations.npz
mnt/c/Users/shaun/OneDrive/Documents/GitHub/LemonadeBench/examples/rl_models/lemonade_ppo_tensorboard/PPO_1/: events.out.tfevents.1765215408.ShaunPC.178246.0
mnt/c/Users/shaun/OneDrive/Documents/GitHub/LemonadeBench/examples/rl_models/lemonade_ppo_tensorboard/PPO_2/: events.out.tfevents.1765215530.ShaunPC.179046.0
runs/2025-12-07_144755/: config.json
runs/2025-12-07_144828/: config.json  conversation.json  summary.json  turns.jsonl
runs/2025-12-07_150614/: config.json
runs/2025-12-07_150654/: config.json
web-client/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  supervisord.conf
web-client/src/: App.tsx  api.ts  index.css  types.ts
web-client/src/components/: ActionControls.tsx  HumanObservation.tsx  MarketInsights.tsx  ModelObservation.tsx  WeatherIcon.tsx
web-client/src/components/charts/: DistributionBoxPlot.tsx  EmptyChartState.tsx  ProfitByConditionChart.tsx  ProfitabilityRateChart.tsx  index.ts
web-client/src/components/game/: DayEndStatsModal.tsx  LocationPicker.tsx  OrderSummary.tsx  PricingControls.tsx  RecipeDialog.tsx  SupplyColumn.tsx  UpgradeShop.tsx  index.ts
web-client/src/components/layout/: Footer.tsx  Header.tsx  PageLayout.tsx  index.ts
web-client/src/components/leaderboard/: ArchitecturesDisplay.tsx  FilterPill.tsx  GoalFramingsDisplay.tsx  LeaderboardTable.tsx  ModelTiersDisplay.tsx  RunDetailsModal.tsx  ScaffoldingsDisplay.tsx  TurnCard.tsx  constants.ts  helpers.tsx  index.ts
web-client/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
web-client/src/hooks/: index.ts  useGame.ts  useSeed.ts  useServerConnection.ts
web-client/src/lib/: constants.ts  format.ts  locations.ts  weather.ts
web-client/src/pages/: GamePage.tsx  LandingPage.tsx  Leaderboard.tsx
(+4 files in other folders)
